[project]
name = "dicke-states-preparation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pylatexenc>=2.10",
    "qiskit>=2.3.0",
    "qiskit-aer>=0.17.2",
    "scipy>=1.17.0",
]
